--- a/README.org
+++ b/README.org
@@ -26,6 +26,14 @@ contenido.
 
 ** Noviembre de 2020
 
+*** 22-Nov-20
++ [[http://www.lix.polytechnique.fr/Labo/Dale.Miller/papers/lp-coq.pdf][Two applications of logic programming to Coq]]. ~ M. Manighetti, D. Miller, A. Momigliano. #ITP #Coq #LogicProgramming
++ [[https://dl.acm.org/doi/abs/10.1145/3426425.3426940][Untangling mechanized proofs]]. ~ Clément Pit-Claude. #ITP #Coq
++ [[https://arxiv.org/abs/2011.07653][Coming to terms with your choices: An existential take on dependent types]]. ~ Georg Stefan Schmid, Olivier Blanvillain, Jad Hamza, Viktor Kunčak. #ITP #Coq #Scala
++ [[http://tydeworkshop.org/2020-abstracts/paper11.pdf][Shallowly embedding type theories as presheaf models in Agda]]. ~ J. Ceulemans, D. Devriese. #ITP #Agda
++ [[https://en.wikipedia.org/wiki/List_of_important_publications_in_mathematics][List of important publications in mathematics]]. #Books #Math
++ [[http://www.stumblingrobot.com/best-math-books/][Best math books (A comprehensive reading list)]]. #Book #Math
+
 *** 21-Nov-20
 + [[https://github.com/nasa/pvslib][Release of the NASA PVS Library (NASALib) v7]].1. #ITP #PVS
 + [[https://openreview.net/pdf?id=yDOqCwuvUb2][BioShake: a Haskell EDSL forbioinformatics workflows]]. ~ Justin Bedo. #Haskell #FunctionalProgramming
